# pyrus-nn

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build-wheels.sh  setup.py
.github/: dependabot.yml
pyrus_nn/: layers.py  models.py
src/: activations.rs  costs.rs  lib.rs  network.rs  pyrus.rs
src/layers/: dense.rs  mod.rs
tests/: test_activations.rs  test_costs.rs  test_layers.rs  test_networks.rs  test_pyrus_sequential.py
