[package]
name = "pyrus-nn"
version = "0.2.1"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/milesgranger/pyrus-nn"
description = "Micro Neural Network framework"
readme = "README.md"

[lib]
name = "pyrus_nn"
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = {version = "^0.12", default-features = false, features = ["serde-1"]}
ndarray-rand = "^0.9"
ndarray-parallel = "^0.9"
rand = "^0.6"
float-cmp = "^0.5.1"
serde = "^1.0"
serde_yaml = "^0.8"
serde_json = "^1.0"
serde_derive = "^1.0"
typetag = "^0.1"
pyo3 = { version = "0.13.1", features = ["extension-module"], default-features = false}

[dev-dependencies]
pretty_assertions = "^0.6"
